--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "tsnode": "ts-node ./src/index.ts --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "blogli": "build/index.js"
+  },
   "author": "Jim Schofield",
   "license": "MIT",
   "devDependencies": {
@@ -23,5 +26,9 @@
     "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@types/markdown-it": "^10.0.2",
+    "markdown-it": "^11.0.0"
   }
 }
