--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Jim Schofield",
   "license": "MIT",
   "devDependencies": {
+    "@types/prismjs": "^1.16.1",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "@types/markdown-it": "^10.0.2",
-    "markdown-it": "^11.0.0"
+    "markdown-it": "^11.0.0",
+    "prismjs": "^1.21.0"
   }
 }
